--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2106,7 +2106,7 @@ button:active,
 
 .item {
   box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
-  margin-bottom: 40px;
+  margin-bottom: 40px !important;
   background: #fff;
   padding: 1em;
 }
