reduced project descriptions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2109,6 +2109,7 @@ button:active,
   margin-bottom: 40px !important;
   background: #fff;
   padding: 1em;
+  border-radius: 5px;
 }
 
 .item header {
