--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2808,3 +2808,8 @@ button:active,
   background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)),
     url("images/overlay.png");
 }
+article.item:hover {
+  transform: rotateZ(-1.5deg) scale(1.1);
+  box-shadow: 5px 7px 9px rgb(0 0 0 / 20%);
+  transition: all ease-out 0.2s;
+}
