--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2813,3 +2813,42 @@ article.item:hover {
   box-shadow: 5px 7px 9px rgb(0 0 0 / 20%);
   transition: all ease-out 0.2s;
 }
+.container p {
+  font-size: 32px;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-align: center;
+  overflow: hidden;
+  padding: 0.5rem;
+}
+.typed-text {
+  font-weight: normal;
+  color: hotpink;
+}
+.cursor {
+  display: inline-block;
+  width: 2px;
+  background: #ccc;
+  margin-left: 0.1rem;
+  animation: blink 1s infinite;
+}
+.cursor.typing {
+  animation: none;
+}
+@keyframes blink {
+  0% {
+    background: #ccc;
+  }
+  49% {
+    background: #ccc;
+  }
+  50% {
+    background: transparent;
+  }
+  99% {
+    background: transparent;
+  }
+  100% {
+    background: #ccc;
+  }
+}
