--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2058,7 +2058,7 @@ button,
   color: #fff !important;
   text-decoration: none;
   padding: 0.75em 2.5em 0.75em 2.5em;
-  background-color: #8ebebc;
+  background-color: #45b2cd;
   border: 0;
   cursor: pointer;
   background-image: -moz-linear-gradient(
