--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2058,7 +2058,7 @@ button,
   color: #fff !important;
   text-decoration: none;
   padding: 0.75em 2.5em 0.75em 2.5em;
-  background-color: #45b2cd;
+  background-color: #45b2cd';
   border: 0;
   cursor: pointer;
   background-image: -moz-linear-gradient(
@@ -2778,6 +2778,9 @@ button:active,
   .image img {
     width: 100%;
   }
+  .animated {
+    font-size: 1em;
+  }
 }
 .btn {
   border-radius: 0.35em;
@@ -2843,6 +2846,8 @@ article.item:hover {
   100% {
     background: #ccc;
   }
+
+  
 }
 .animated {
   font-size: 32px;
