--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2058,7 +2058,7 @@ button,
   color: #fff !important;
   text-decoration: none;
   padding: 0.75em 2.5em 0.75em 2.5em;
-  background-color: #45b2cd';
+  background-color: #45b2cd;
   border: 0;
   cursor: pointer;
   background-image: -moz-linear-gradient(
@@ -2783,7 +2783,7 @@ button:active,
   }
   #main section.cover {
     padding-bottom: 1em;
-}
+  }
 }
 .btn {
   border-radius: 0.35em;
@@ -2849,8 +2849,6 @@ article.item:hover {
   100% {
     background: #ccc;
   }
-
-  
 }
 .animated {
   font-size: 32px;
