--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2086,6 +2086,9 @@ button,
   -ms-transition: background-color 0.35s ease-in-out;
   transition: background-color 0.35s ease-in-out;
 }
+.button:hover {
+  background-color: #68d1e9;
+}
 
 input[type="button"]:hover,
 input[type="submit"]:hover,
