--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2090,7 +2090,8 @@ input[type="button"]:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
 button:hover,
-.button:hover {
+.button:hover,
+.btn:hover {
   background-color: #68d1e9;
 }
 
