--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -253,7 +253,7 @@ header > p {
   margin: 1em 0 0 0;
   line-height: 1.2em;
   padding: 8px;
-  text-align: left;
+  text-align: center;
   margin-bottom: 16px;
 }
 
