--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2308,7 +2308,7 @@ button:active,
   margin-left: 375px;
   text-align: center;
   background-color: #dce3e2;
-  padding: 3em 0 4em 0;
+  padding: 20px;
   box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05),
     inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
   font-size: 0.8em;
