change bg-color btns on hover

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2092,7 +2092,7 @@ input[type="reset"]:hover,
 button:hover,
 .button:hover,
 .btn:hover {
-  background-color: #68d1e9;
+  background-color: #5c929e;
 }
 
 input[type="button"]:active,
