--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2306,7 +2306,7 @@ button:active,
 #footer {
   margin-left: 375px;
   text-align: center;
-  background-color: #dce3e2;
+  background-color: #282c34;
   padding: 20px;
   box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05),
     inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
@@ -2867,4 +2867,7 @@ section#about h2 {
 section#about {
   background: #282c34;
   color: #61dafb;
+}
+.copyright p {
+  color: #fff;
 }
