--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2772,6 +2772,13 @@ button:active,
   #main section.cover {
     padding-bottom: 1em;
   }
+  .container {
+    margin: 5em 0;
+  }
+  #main section.cover {
+    padding-bottom: 1em;
+    height: 100vh;
+  }
 }
 .btn {
   color: #fff !important;
